# foreman-mcp

./: Containerfile  README.md  pyproject.toml
src/foreman_mcp/: __init__.py  server.py
