[project]
name = "foreman-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adam Ruzicka", email = "aruzicka@redhat.com" }
]
requires-python = ">=3.13"
dependencies = ["anyio>=4.5", "click>=8.1.0", "httpx>=0.27", "mcp", "starlette", "uvicorn"]

[project.scripts]
foreman-mcp = "foreman_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
